Version 3.5 release Notes

- Add user defined objects in catalog setting.
- Can change the color for lines and nebulae from the catalog setting.
- New online Internet resources:
  - Add any catalog from Vizier
  - Search Simbad, NED, Vizier
  - Link object detail to Simbad, NED, HyperLeda
- Extend the allowed date to +/- 200'000 years
- Compute the precession using "New precession expressions, valid for long time intervals, J. Vondrak, 2011"
- Compute DeltaT values from "Five Millennium Canon of Solar Eclipses, Espenak & Meeus, 2006"
- Add Tirion constellation figures created by James Trogolo